--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,4 +1,4 @@
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+<!-- <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
 
 <ion-header class="ion-no-border">
   <ion-toolbar>
@@ -18,12 +18,18 @@
   </svg>
 
   <div class="ion-padding">
-    <form >
-      <ion-input label="UserName" shape="round" label-placement="floating" fill="outline" placeholder="Enter UserName" type="text"  name="username" required></ion-input>
-      <br/>
-      <ion-input label="Password" shape="round" label-placement="floating" fill="outline" placeholder="Enter Password" type="password"  name="password" required></ion-input>
-      <br/>
-      <ion-button expand="block" shape="round" size="small" color="medium" type="submit">Submit</ion-button>
+    <form (ngSubmit)="login()">
+      <ion-item>
+        <ion-label position="floating">Username</ion-label>
+        <ion-input type="text" [(ngModel)]="username" name="username" required></ion-input>
+      </ion-item>
+  
+      <ion-item>
+        <ion-label position="floating">Password</ion-label>
+        <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
+      </ion-item>
+  
+      <ion-button expand="full" type="submit">Submit</ion-button>
     </form>
   </div>
 </ion-content>
@@ -31,5 +37,60 @@
 <ion-footer class="ion-no-border">
   <ion-toolbar>
     <p class="ion-text-center custom-font">Forgot password Contact Administrator? <a href="">Click Me</a></p>
+  </ion-toolbar>
+</ion-footer> -->
+
+
+
+
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+<ion-header class="ion-no-border">
+  <ion-toolbar>
+    <div class="back-circle"></div>
+    <ion-title class="ion-text-center custom-font">Sign In</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"> </ion-menu-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content fullscreen="true">
+
+  <svg class="back-blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+    <path fill="#8295A3"
+      d="M68.6,-33.5C81.6,-17.2,79.6,13.8,65.7,37.6C51.8,61.3,25.9,77.8,2.1,76.6C-21.7,75.4,-43.5,56.5,-54.2,34.6C-65,12.7,-64.8,-12.3,-53.9,-27.4C-43,-42.4,-21.5,-47.6,3.2,-49.4C27.9,-51.2,55.7,-49.7,68.6,-33.5Z"
+      transform="translate(100 100)" />
+  </svg>
+
+  <div class="ion-padding">
+
+    <form class="ion-padding" (ngSubmit)="login()">
+
+      <div class="wrap-input">
+        <input class="input" type="text" [(ngModel)]="username" name="username" required placeholder="Username">
+      </div>
+
+      <div class="wrap-input">
+        <input class="input" type="password" [(ngModel)]="password" name="password" name="password"
+          placeholder="Password">
+      </div>
+
+      <div class="container-form-btn">
+        <button class="form-btn custom-font">
+          Submit
+        </button>
+      </div>
+
+
+    </form>
+
+  </div>
+
+</ion-content>
+
+<ion-footer class="ion-no-border">
+  <ion-toolbar>
+    <p class="ion-text-center custom-font">Already have an account? <a href="">Sign In</a></p>
   </ion-toolbar>
 </ion-footer>
