--- a/src/app/component/newhireform/newhireform.component.html
+++ b/src/app/component/newhireform/newhireform.component.html
@@ -44,9 +44,9 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let item of formData.inlineitem; let i = index">
+              <tr *ngFor="let row of rows; let i = index">
                 <td>
-                  <input [(ngModel)]="rows[i].name" class="form-control" type="text" id="quantity{{ i }}" id="quantity{{ i }}"/>
+                  <input [(ngModel)]="rows[i].name" class="form-control" type="text" name="name"/>
                 </td>
                 <td>
                   <select [(ngModel)]="rows[i].category" class="form-control" name="category">
@@ -62,7 +62,7 @@
                   <input type="number" [(ngModel)]="rows[i].quantity" class="form-control" name="quantity" value="1" />
                 </td>
                 <td>
-                  <button (click)="deleteInlineItem(i)" mat-mini-fab color="accent"
+                  <button (click)="deleteRow(i)" mat-mini-fab color="accent"
                     aria-label="Example icon button with a delete icon">
                     <ion-icon name="trash-outline"></ion-icon>
                   </button>
@@ -72,7 +72,7 @@
             <tfoot>
               <tr>
                 <td colspan="7">
-                  <button (click)="addInlineItem()" mat-raised-button style="cursor: pointer">Add New (+)</button><br />
+                  <button (click)="addRow()" mat-raised-button style="cursor: pointer">Add New (+)</button><br />
                 </td>
               </tr>
             </tfoot>
