--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,45 +17,35 @@
         </ion-menu-toggle>
 
         <ion-menu-toggle>
-          <ion-item routerLink="/login">
-            <ion-icon name="person-circle-outline" slot="start"></ion-icon>
-            <ion-label>Login</ion-label>
+          <ion-item routerLink="/">
+            <ion-icon name="stats-chart-outline" slot="start"></ion-icon>
+            <ion-label>Analylitcs</ion-label>
           </ion-item>
         </ion-menu-toggle>
 
         <ion-menu-toggle>
-          <ion-item routerLink="/procurement">
-            <ion-icon name="laptop-outline" slot="start"></ion-icon>
-            <ion-label>Procurement</ion-label>
+          <ion-item routerLink="/">
+            <ion-icon name="document-text-outline" slot="start"></ion-icon>
+            <ion-label>Reports</ion-label>
           </ion-item>
         </ion-menu-toggle>
 
-        <ion-item>
-          <ion-icon name="stats-chart-outline" slot="start"></ion-icon>
-          <ion-label>Analylitcs</ion-label>
-        </ion-item>
+        <ion-menu-toggle>
+          <ion-item routerLink="/">
+            <ion-icon name="settings-outline" slot="start"></ion-icon>
+            <ion-label>Settings</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
 
-        <ion-item>
-          <ion-icon name="settings-outline" slot="start"></ion-icon>
-          <ion-label>Settings</ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-icon name="trash" slot="start"></ion-icon>
-          <ion-label>Settings</ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-icon name="warning" slot="start"></ion-icon>
-          <ion-label>Warning</ion-label>
-        </ion-item>
-
+        <ion-menu-toggle>
+          <ion-item routerLink="/">
+            <ion-icon name="help-circle-outline" slot="start"></ion-icon>
+            <ion-label>Help</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
       </ion-list>
     </ion-content>
   </ion-menu>
-
   <ion-router-outlet id="main">
-
   </ion-router-outlet>
-
 </ion-app>
