--- a/src/app/pages/procurement/procurement.page.html
+++ b/src/app/pages/procurement/procurement.page.html
@@ -43,191 +43,18 @@
         <app-newhireform></app-newhireform>
       </ng-container>
 
-      <form *ngIf="selectedForm === 'Replacement'" id="Replacement" [formGroup]="Replacement">
-        <ion-card-title>
-          <ion-button expand="block" color="light" disabled="true">
-            <ion-label>End User Form</ion-label>
-            <ion-icon name="arrow-down-circle-outline"></ion-icon>
-          </ion-button>
-        </ion-card-title>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="department">Department</label>
-            <select id="department" class="form-control" formControlName="department">
-              <option selected>Choose...</option>
-              <option>...</option>
-            </select>
-          </div>
-          <div class="form-group col-md-6">
-            <label for="IsExpenditure">Is Expenditure</label>
-            <select id="IsExpenditure" class="form-control">
-              <option selected>Choose...</option>
-              <option value="Yes">Yes</option>
-              <option value="No">No</option>
-            </select>
-          </div>
-          <div class="form-group col-md-6">
-            <label for="TotalBudget">Total Budget</label>
-            <input type="text" class="form-control" id="TotalBudget" placeholder="Total Buget" />
-          </div>
-          <div class="form-group col-md-6">
-            <label for="UtilizedBudget">Utilized Budget</label>
-            <input type="text" class="form-control" id="UtilizedBudget" placeholder="Utilized Buget" />
-          </div>
-          <div class="form-group col-md-6">
-            <label for="upload">Upload</label>
-            <input type="file" class="form-control" id="upload" placeholder="Upload" />
-          </div>
-          <div class="form-group col-md-6">
-            <label for="upload">Comment</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
-          </div>
-        </div>
-        <div class="form-table">
-          <table class="table table-striped table-bordered table-sm">
-            <thead>
-              <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Category</th>
-                <th scope="col">Item</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let row of rows; let i = index">
-                <td>
-                  <input [(ngModel)]="rows[i].name" class="form-control" type="text" />
-                </td>
-                <td>
-                  <select [(ngModel)]="rows[i].category" class="form-control">
-                    <option value="0">Select</option>
-                    <option value="1">Electronics</option>
-                    <option value="2">Furniture</option>
-                    <option value="3">Grocery</option>
-                    <option value="4">Clothing</option>
-                    <option value="5">Footwear</option>
-                    <option value="6">Others</option>
-                  </select>
-                </td>
-                <td>
-                  <select [(ngModel)]="rows[i].item" class="form-control">
-                    <option value="0">Select</option>
-                    <option value="1">Electronics</option>
-                    <option value="2">Furniture</option>
-                    <option value="3">Grocery</option>
-                    <option value="4">Clothing</option>
-                    <option value="5">Footwear</option>
-                    <option value="6">Others</option>
-                  </select>
-                </td>
-                <td>
-                  <input [(ngModel)]="rows[i].mobno" class="form-control" type="text" />
-                </td>
-                <td>
-                  <button type="button" class="btn btn-danger" (click)="deleteRow(i)">
-                    <ion-icon name="trash-outline"></ion-icon>
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-            <tfoot>
-              <tr>
-                <td colspan="7">
-                  <button type="button" class="btn btn-info" (click)="addRow()">
-                    <ion-icon name="add-circle-outline"></ion-icon></button><br />
-                </td>
-              </tr>
-            </tfoot>
-          </table>
-          <div>
-            <button id="payment-button" type="submit" class="btn btn-lg btn-success btn-block">
-              <span id="payment-button-amount">Submit</span>
-            </button>
-          </div>
-        </div>
-      </form>
+      <ng-container *ngIf="formType === 'Replacement'">
+        <app-replacementform></app-replacementform>
+      </ng-container>
 
-      <form *ngIf="selectedForm === 'TemporaryArrangements'" id="TemporaryArrangements" [formGroup]="TemporaryArrangements">
+      <ng-container *ngIf="formType === 'StockManagement'">
+        <app-temporaryform></app-temporaryform>
+      </ng-container>
 
-      </form>
+      <ng-container *ngIf="formType === 'TemporaryArrangements'">
+        <app-stockmanagementform></app-stockmanagementform>
+      </ng-container>
 
-      <form *ngIf="selectedForm === 'StockManagement'" id="StockManagement" [formGroup]="StockManagement">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="col-md-6">
-              <ion-input label="Outline input" label-placement="floating" fill="outline"
-                placeholder="Enter text"></ion-input>
-            </div>
-            <div class="col-md-6">
-              <ion-input label="Outline input" label-placement="floating" fill="outline"
-                placeholder="Enter text"></ion-input>
-            </div>
-          </div>
-          <div class="col-md-12">
-            <table class="table table-striped table-bordered table-sm">
-              <thead>
-                <tr>
-                  <th scope="col">SN No.</th>
-                  <th scope="col">Name</th>
-                  <th scope="col">Category</th>
-                  <th scope="col">Item</th>
-                  <th scope="col">Quantity</th>
-                  <th scope="col">Action</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let row of rows; let i = index">
-                  <td>
-                    <input [(ngModel)]="rows[i].name" class="form-control" type="text" />
-                  </td>
-                  <td>
-                    <input [(ngModel)]="rows[i].mobno" class="form-control" type="text" />
-                  </td>
-                  <td>
-                    <select [(ngModel)]="rows[i].category" class="form-control">
-                      <option value="0">Select</option>
-                      <option value="1">Electronics</option>
-                      <option value="2">Furniture</option>
-                      <option value="3">Grocery</option>
-                      <option value="4">Clothing</option>
-                      <option value="5">Footwear</option>
-                      <option value="6">Others</option>
-                    </select>
-                  </td>
-                  <td>
-                    <select [(ngModel)]="rows[i].item" class="form-control">
-                      <option value="0">Select</option>
-                      <option value="1">Electronics</option>
-                      <option value="2">Furniture</option>
-                      <option value="3">Grocery</option>
-                      <option value="4">Clothing</option>
-                      <option value="5">Footwear</option>
-                      <option value="6">Others</option>
-                    </select>
-                  </td>
-                  <td>
-                    <input [(ngModel)]="rows[i].mobno" class="form-control" type="text" />
-                  </td>
-                  <td>
-                    <button (click)="deleteRow(i)" ion-mini-fab color="accent">
-                      <ion-icon name="trash-outline"></ion-icon>
-                    </button>
-                  </td>
-                </tr>
-              </tbody>
-              <tfoot>
-                <tr>
-                  <td colspan="7">
-                    <button (click)="addRow()" ion-raised-button style="cursor: pointer">
-                      Add New (+)</button><br />
-                  </td>
-                </tr>
-              </tfoot>
-            </table>
-          </div>
-        </div>
-      </form>
     </ion-card-content>
   </ion-card>
 </ion-content>
