--- a/src/app/component/replacementform/replacementform.component.html
+++ b/src/app/component/replacementform/replacementform.component.html
@@ -1,4 +1,4 @@
-<form class="requires-validation" novalidate>
+<form class="requires-validation" validate>
   <div class="panel-group">
     <div class="panel panel-primary">
       <div class="panel-body">
@@ -30,16 +30,16 @@
             <input type="number" class="form-control" [(ngModel)]="utilizedBudget" name="utilizedBudget" placeholder="Utilized Buget" />
           </div>
           <div class="form-group col-md-6">
-            <label for="upload">Upload</label>
-            <input type="file" class="form-control" [(ngModel)]="upload" name="upload" multiple />
+            <label for="attachment">Attachment</label>
+            <input type="file" class="form-control" [(ngModel)]="attachment" name="upload" multiple />
           </div>
           <div class="form-group col-md-4">
             <label  for="date">Purchase Date</label>
-            <input type="date" class="form-control" [(ngModel)]="purchaseDate" name="purchaseDate" />
+            <input type="date" class="form-control" [(ngModel)]="purchaseDate" name="purchaseDate" (blur)="calculateAge()" />
           </div>
           <div class="form-group col-md-4">
             <label class="required" for="age">Age</label>
-            <input type="number" class="form-control" [(ngModel)]="age" name="age" placeholder="Age" required/>
+            <input type="number" class="form-control" [(ngModel)]="age" name="age" placeholder="Age" required [disabled]="ageCalculated"/>
           </div>
           <div class="form-group col-md-4">
             <label class="required" for="remarks">Remarks</label>
@@ -97,4 +97,22 @@
     </div>
   </div>
 </form>
+<script>
+  // on click of purchase date, age will be auto calculated and displayed in age field along with disabled field
+  function calculateAge() {
+    var today = new Date();
+    var selectedDate = new Date(document.getElementsByName('purchaseDate')[0].value);
+    var age = today.getFullYear() - selectedDate.getFullYear();
+    var monthDiff = today.getMonth() - selectedDate.getMonth();
+
+    if (monthDiff < 0 || (monthDiff === 0 && today.getDate() < selectedDate.getDate())) {
+      age--;
+    }
+
+    document.getElementsByName('age')[0].value = age;
+    document.getElementsByName('age')[0].disabled = true;
+    // change color 
+    document.getElementsByName('age')[0].style.color = "black";
+  }
+</script>
 
