--- a/src/app/component/temporaryform/temporaryform.component.html
+++ b/src/app/component/temporaryform/temporaryform.component.html
@@ -1,3 +1,104 @@
-<p>
-  temporaryform works!
-</p>
+<form class="requires-validation" validate>
+  <div class="panel-group">
+    <div class="panel panel-primary">
+      <div class="panel-body">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label class="form-label required" for="name">Name</label>
+            <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" placeholder="Name"
+              required />
+          </div>
+          <div class="form-group col-md-6">
+            <label class="form-label required" for="department">Department</label>
+            <select class="form-control" id="department" [(ngModel)]="department" name="department" required>
+              <option *ngFor="let option of departmentDropdown" [value]="option.id">{{ option.DepartmentName }}</option>
+            </select>
+          </div>
+          <div class="form-group col-md-6">
+            <label class="required" for="IsExpenditure">Is Expenditure</label>
+            <select class="form-control" [(ngModel)]="isExpenditure" name="isExpenditure" required>
+              <option selected>Choose...</option>
+              <option value="Yes">Yes</option>
+              <option value="No">No</option>
+            </select>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="TotalBudget">Total Budget</label>
+            <input type="number" class="form-control" [(ngModel)]="totalBudget" name="totalBudget" placeholder="Total Buget" />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="UtilizedBudget">Utilized Budget</label>
+            <input type="number" class="form-control" [(ngModel)]="utilizedBudget" name="utilizedBudget"
+              placeholder="Utilized Buget" />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="attachment">Attachment</label>
+            <input type="file" class="form-control" [(ngModel)]="attachment" name="upload" multiple />
+          </div>
+          <div class="form-group col-md-6">
+            <label class="required" for="remarks">Remarks</label>
+            <textarea class="form-control" [(ngModel)]="remarks" name="remarks" rows="1"></textarea>
+          </div>
+          <div class="form-group col-md-6">
+            <label class="required" for="deviceType">Device Type</label>
+            <select class="form-control" [(ngModel)]="deviceType" name="modeType" required>
+              <option selected>Choose...</option>
+              <option value="New">New</option>
+              <option value="Rental">Rental</option>
+            </select>
+          </div>
+          <table class="table table-bordered">
+            <thead class="text text-primary">
+              <tr>
+                <th>Category</th>
+                <th>Item</th>
+                <th>Cost Center</th>
+                <th>Quantity</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let row of rows; let i = index">
+                <td>
+                  <select [(ngModel)]="rows[i].category" class="form-control" name="category" required>
+                    <option *ngFor="let option of categoryDropdown" [value]="option.CategoryId">{{ option.ItemCategory
+                      }}</option>
+                  </select>
+                </td>
+                <td>
+                  <select [(ngModel)]="rows[i].item" class="form-control" name="item" required>
+                    <option *ngFor="let option of itemDropdown" [value]="option.ItemId">{{ option.ItemName }}</option>
+                  </select>
+                </td>
+                <td>
+                  <select [(ngModel)]="rows[i].costCenter" class="form-control" name="costCenter" required>
+                    <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}
+                    </option>
+                  </select>
+                </td>
+                <td>
+                  <input type="number" [(ngModel)]="rows[i].quantity" class="form-control" value="1" name="quantity"
+                    required />
+                </td>
+                <td>
+                  <button (click)="deleteRow(i)" mat-mini-fab color="accent"
+                    aria-label="Example icon button with a delete icon">
+                    <ion-icon name="trash-outline"></ion-icon>
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="7">
+                  <button (click)="addRow()" mat-raised-button style="cursor: pointer">Add New (+)</button><br />
+                </td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+        <button class="btn btn-info" (click)="submit()">Submit</button>
+      </div>
+    </div>
+  </div>
+</form>
