--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,35 +10,35 @@
       <ion-list>
 
         <ion-menu-toggle>
-          <ion-item routerLink="/">
+          <ion-item routerLink="">
             <ion-icon name="home" slot="start"></ion-icon>
             <ion-label>Home</ion-label>
           </ion-item>
         </ion-menu-toggle>
 
         <ion-menu-toggle>
-          <ion-item routerLink="/">
+          <ion-item routerLink="">
             <ion-icon name="stats-chart-outline" slot="start"></ion-icon>
             <ion-label>Analylitcs</ion-label>
           </ion-item>
         </ion-menu-toggle>
 
         <ion-menu-toggle>
-          <ion-item routerLink="/">
+          <ion-item routerLink="">
             <ion-icon name="document-text-outline" slot="start"></ion-icon>
             <ion-label>Reports</ion-label>
           </ion-item>
         </ion-menu-toggle>
 
         <ion-menu-toggle>
-          <ion-item routerLink="/">
+          <ion-item routerLink="">
             <ion-icon name="settings-outline" slot="start"></ion-icon>
             <ion-label>Settings</ion-label>
           </ion-item>
         </ion-menu-toggle>
 
         <ion-menu-toggle>
-          <ion-item routerLink="/">
+          <ion-item routerLink="">
             <ion-icon name="help-circle-outline" slot="start"></ion-icon>
             <ion-label>Help</ion-label>
           </ion-item>
