--- a/src/app/component/newhireform/newhireform.component.html
+++ b/src/app/component/newhireform/newhireform.component.html
@@ -4,6 +4,10 @@
       <div class="panel-body">
         <div class="form-row">
           <div class="form-group col-md-6">
+            <label class="form-label required" for="name">Name</label>
+            <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" placeholder="Name" required/>
+          </div>
+          <div class="form-group col-md-6">
             <label for="department">Department</label>
             <select class="form-control" [(ngModel)]="department" name="department">
               <option *ngFor="let option of departmentDropdown" [value]="option.id">{{ option.DepartmentName }}</option>
@@ -19,66 +23,72 @@
           </div>
           <div class="form-group col-md-6">
             <label for="TotalBudget">Total Budget</label>
-            <input type="number" class="form-control" [(ngModel)]="totalBudget" name="totalBudget" placeholder="Total Buget" />
+            <input type="number" class="form-control" [(ngModel)]="totalBudget" name="totalBudget"
+              placeholder="Total Buget" />
           </div>
-          <div class="form-group col-md-6">
+          <div class="form-group col-md-4">
             <label for="UtilizedBudget">Utilized Budget</label>
-            <input type="number" class="form-control" [(ngModel)]="utilizedBudget" name="utilizedBudget" placeholder="Utilized Buget" />
+            <input type="number" class="form-control" [(ngModel)]="utilizedBudget" name="utilizedBudget"
+              placeholder="Utilized Buget" />
           </div>
-          <div class="form-group col-md-6">
-            <label for="upload">Upload</label>
-            <input type="file" class="form-control" [(ngModel)]="upload" name="upload" />
+          <div class="form-group col-md-4">
+            <label for="attachment">Attachement</label>
+            <input type="file" class="form-control" [(ngModel)]="attachment" name="upload" />
           </div>
-          <div class="form-group col-md-6">
+          <div class="form-group col-md-4">
             <label for="remarks">Remarks</label>
             <textarea class="form-control" [(ngModel)]="remarks" name="remarks" rows="1"></textarea>
           </div>
-          <table class="table table-bordered">
-            <thead class="text text-primary">
-              <tr>
-                <th>Name</th>
-                <th>Category</th>
-                <th>Item</th>
-                <th>Quantity</th>
-                <th>Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let row of rows; let i = index">
-                <td>
-                  <input [(ngModel)]="rows[i].name" class="form-control" type="text" name="name"/>
-                </td>
-                <td>
-                  <select [(ngModel)]="rows[i].category" class="form-control" name="category">
-                    <option *ngFor="let option of categoryDropdown" [value]="option.CategoryId">{{ option.ItemCategory }}</option>
-                  </select>
-                </td>
-                <td>
-                  <select [(ngModel)]="rows[i].item" class="form-control" name="item">
-                    <option *ngFor="let option of itemDropdown" [value]="option.ItemId">{{ option.ItemName }}</option>
-                  </select>
-                </td>
-                <td>
-                  <input type="number" [(ngModel)]="rows[i].quantity" class="form-control" name="quantity" value="1" />
-                </td>
-                <td>
-                  <button (click)="deleteRow(i)" mat-mini-fab color="accent"
-                    aria-label="Example icon button with a delete icon">
-                    <ion-icon name="trash-outline"></ion-icon>
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-            <tfoot>
-              <tr>
-                <td colspan="7">
-                  <button (click)="addRow()" mat-raised-button style="cursor: pointer">Add New (+)</button><br />
-                </td>
-              </tr>
-            </tfoot>
-          </table>
+          <div class="panel-body">
+            <table class="table table-bordered">
+              <thead class="text text-primary">
+                <tr>
+                  <th>Category</th>
+                  <th>Item</th>
+                  <th>Cost Center</th>
+                  <th>Quantity</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let row of rows; let i = index">
+                  <td>
+                    <select [(ngModel)]="rows[i].category" class="form-control" [ngModelOptions]="{standalone: true}">
+                      <option *ngFor="let option of categoryDropdown" [value]="option.CategoryId">{{ option.ItemCategory
+                        }}</option>
+                    </select>
+                  </td>
+                  <td>
+                    <select [(ngModel)]="rows[i].item" class="form-control" [ngModelOptions]="{standalone: true}">
+                      <option *ngFor="let option of itemDropdown" [value]="option.ItemId">{{ option.ItemName }}</option>
+                    </select>
+                  </td>
+                  <td>
+                    <select [(ngModel)]="rows[i].costCenter" class="form-control" [ngModelOptions]="{standalone: true}">
+                      <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}
+                      </option>
+                    </select>
+                  </td>
+                  <td>
+                    <input type="number" [(ngModel)]="rows[i].quantity" class="form-control"
+                      [ngModelOptions]="{standalone: true}">
+                  </td>
+                  <td>
+                    <button (click)="deleteRow(i)"><ion-icon name="trash-outline"></ion-icon></button>
+                  </td>
+                </tr>
+              </tbody>
+              <tfoot>
+                <tr>
+                  <td colspan="7">
+                    <button (click)="addRow()" mat-raised-button style="cursor: pointer">Add New(+)</button><br />
+                  </td>
+                </tr>
+              </tfoot>
+            </table>
+            <button class="btn btn-info" (click)="submit()">Submit</button>
+          </div>
         </div>
-        <button class="btn btn-info" (click)="submit()">Submit</button>
       </div>
     </div>
   </div>
