--- a/src/app/pages/procurement/procurement.page.html
+++ b/src/app/pages/procurement/procurement.page.html
@@ -23,7 +23,7 @@
       </ion-card-title>
       <ion-radio-group [(ngModel)]="formType" (ionChange)="handleFormTypeChange()">
         <ion-item>
-          <ion-radio value="NewHire">New Hire</ion-radio>
+          <ion-radio checked="true" value="NewHire">New Hire</ion-radio>
         </ion-item>
         <ion-item>
           <ion-radio value="Replacement">Replacement</ion-radio>
