--- a/src/app/pages/procurementview/procurementview.page.scss
+++ b/src/app/pages/procurementview/procurementview.page.scss
@@ -3,9 +3,19 @@
     border: 1px solid #000000;
     border-collapse: collapse;
     width: 100%;
-    font-size: 12px;
     text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
-    
 }
+
+// .table th{
+//     border: 1px solid #000000;
+//     padding: 5px;
+//     background-color: #f2f2f2;
+// }
+
+// .table td{
+//     border: 1px solid #000000;
+//     padding: 5px;
+// }
+
