--- a/src/app/component/newhireform/newhireform.component.html
+++ b/src/app/component/newhireform/newhireform.component.html
@@ -5,7 +5,8 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label class="form-label required" for="name">Name</label>
-            <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" placeholder="Name" required/>
+            <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" placeholder="Name"
+              required />
           </div>
           <div class="form-group col-md-6">
             <label for="department">Department</label>
@@ -54,13 +55,15 @@
                 <tr *ngFor="let row of rows; let i = index">
                   <td>
                     <select [(ngModel)]="rows[i].category" class="form-control" [ngModelOptions]="{standalone: true}">
-                      <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory">{{ option.ItemCategory
+                      <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory">{{
+                        option.ItemCategory
                         }}</option>
                     </select>
                   </td>
                   <td>
                     <select [(ngModel)]="rows[i].item" class="form-control" [ngModelOptions]="{standalone: true}">
-                      <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}</option>
+                      <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}
+                      </option>
                     </select>
                   </td>
                   <td>
@@ -74,14 +77,18 @@
                       [ngModelOptions]="{standalone: true}">
                   </td>
                   <td>
-                    <button (click)="deleteRow(i)"><ion-icon name="trash-outline"></ion-icon></button>
+                    <ion-button (click)="deleteRow(i)" color="danger" fill="solid" size="small">
+                      <ion-icon name="trash-outline"></ion-icon>
+                    </ion-button>
                   </td>
                 </tr>
               </tbody>
               <tfoot>
                 <tr>
                   <td colspan="7">
-                    <button (click)="addRow()" mat-raised-button style="cursor: pointer">Add New(+)</button><br />
+                    <ion-button (click)="addRow()" color="success" fill="solid" size="small">
+                      <ion-icon name="add-circle-outline"></ion-icon>
+                    </ion-button>
                   </td>
                 </tr>
               </tfoot>
