--- a/src/app/component/replacementform/replacementform.component.html
+++ b/src/app/component/replacementform/replacementform.component.html
@@ -5,7 +5,8 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label class="form-label required" for="name">Name</label>
-            <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" placeholder="Name" required/>
+            <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" placeholder="Name"
+              required />
           </div>
           <div class="form-group col-md-6">
             <label class="form-label required" for="department">Department</label>
@@ -23,23 +24,27 @@
           </div>
           <div class="form-group col-md-6">
             <label for="TotalBudget">Total Budget</label>
-            <input type="number" class="form-control" [(ngModel)]="totalBudget" name="totalBudget" placeholder="Total Buget" />
+            <input type="number" class="form-control" [(ngModel)]="totalBudget" name="totalBudget"
+              placeholder="Total Buget" />
           </div>
           <div class="form-group col-md-6">
             <label for="UtilizedBudget">Utilized Budget</label>
-            <input type="number" class="form-control" [(ngModel)]="utilizedBudget" name="utilizedBudget" placeholder="Utilized Buget" />
+            <input type="number" class="form-control" [(ngModel)]="utilizedBudget" name="utilizedBudget"
+              placeholder="Utilized Buget" />
           </div>
           <div class="form-group col-md-6">
             <label for="attachment">Attachment</label>
             <input type="file" class="form-control" [(ngModel)]="attachment" name="upload" multiple />
           </div>
           <div class="form-group col-md-4">
-            <label  for="date">Purchase Date</label>
-            <input type="date" class="form-control" [(ngModel)]="purchaseDate" name="purchaseDate" (blur)="calculateAge()" />
+            <label for="date">Purchase Date</label>
+            <input type="date" class="form-control" [(ngModel)]="purchaseDate" name="purchaseDate"
+              (blur)="calculateAge()" />
           </div>
           <div class="form-group col-md-4">
             <label class="required" for="age">Age</label>
-            <input type="number" class="form-control" [(ngModel)]="age" name="age" placeholder="Age" required [disabled]="ageCalculated"/>
+            <input type="number" class="form-control" [(ngModel)]="age" name="age" placeholder="Age" required
+              [disabled]="ageCalculated" />
           </div>
           <div class="form-group col-md-4">
             <label class="required" for="remarks">Remarks</label>
@@ -60,31 +65,39 @@
                 <tr *ngFor="let row of rows; let i = index">
                   <td>
                     <select [(ngModel)]="rows[i].category" class="form-control" [ngModelOptions]="{standalone: true}">
-                      <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory">{{ option.ItemCategory }}</option>
+                      <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory">{{
+                        option.ItemCategory }}</option>
                     </select>
                   </td>
                   <td>
                     <select [(ngModel)]="rows[i].item" class="form-control" [ngModelOptions]="{standalone: true}">
-                      <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}</option>
+                      <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}
+                      </option>
                     </select>
                   </td>
                   <td>
                     <select [(ngModel)]="rows[i].costCenter" class="form-control" [ngModelOptions]="{standalone: true}">
-                      <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}</option>
+                      <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}
+                      </option>
                     </select>
                   </td>
                   <td>
-                    <input type="number" [(ngModel)]="rows[i].quantity" class="form-control" [ngModelOptions]="{standalone: true}">
+                    <input type="number" [(ngModel)]="rows[i].quantity" class="form-control"
+                      [ngModelOptions]="{standalone: true}">
                   </td>
                   <td>
-                    <button (click)="deleteRow(i)"><ion-icon name="trash-outline"></ion-icon></button>
+                    <ion-button (click)="deleteRow(i)" color="danger" fill="solid" size="small">
+                      <ion-icon name="trash-outline"></ion-icon>
+                    </ion-button>
                   </td>
                 </tr>
               </tbody>
               <tfoot>
                 <tr>
                   <td colspan="7">
-                    <button (click)="addRow()" mat-raised-button style="cursor: pointer">Add New(+)</button><br />
+                    <ion-button (click)="addRow()" color="success" fill="solid" size="small">
+                      <ion-icon name="add-circle-outline"></ion-icon>
+                    </ion-button>
                   </td>
                 </tr>
               </tfoot>
@@ -96,5 +109,3 @@
     </div>
   </div>
 </form>
-
-
