--- a/src/app/pages/procurementview/procurementview.page.html
+++ b/src/app/pages/procurementview/procurementview.page.html
@@ -1,73 +1,49 @@
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-<ion-header [translucent]="true">
+<ion-header translucent="true">
   <ion-toolbar>
-    <ion-title>procurementview</ion-title>
+    <ion-title>Procurement List</ion-title>
     <ion-buttons slot="start">
-      <ion-menu-button menu="main-menu"> </ion-menu-button>
+      <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content fullscreen="true">
   <ion-card>
     <ion-card-header>
-      <ion-card-title>
-        <ion-button expand="block" color="light" disabled="true">
-          <ion-label>Procurement List</ion-label>
-        </ion-button>
-      </ion-card-title>
+      <ion-searchbar placeholder="Filter"></ion-searchbar>
     </ion-card-header>
     <ion-card-content>
       <div class="row">
         <div class="col-xl-12">
-          <ng-container *ngFor="let data of procurementData">
-            <table class="table">
-              <thead class="thead-light">
-                <tr>
-                  <th scope="col">Name</th>
-                  <th scope="col">Department Name</th>
-                  <th scope="col">Request No</th>
-                  <th scope="col">Action</th>
-                </tr>
-              </thead>
-              <tbody>
+          <table class="table">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Department Name</th>
+                <th scope="col">Request No</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <ng-container *ngFor="let data of procurementData">
                 <tr>
                   <td scope="col">{{data.Name}}</td>
                   <td scope="col">{{data.department_name}}</td>
                   <td scope="col">{{data.department_name}}</td>
                   <td scope="col">
-                    <ion-button class="edit" color="tertiary" fill="clear" size="small">
+                    <ion-button (click)="setOpen(true)" class="edit" color="tertiary" fill="clear" size="small">
                       <ion-icon name="eye-off-outline"></ion-icon>
                     </ion-button>
+                    <ion-alert [isOpen]="isAlertOpen" header="Alert" subHeader="Important message"
+                      message="This is an alert!" [buttons]="alertButtons" (didDismiss)="setOpen(false)"></ion-alert>
                     <ion-button class="delete" color="danger" fill="clear" size="small">
                       <ion-icon name="trash-outline"></ion-icon>
                     </ion-button>
                   </td>
                 </tr>
-                <tr class="thead-light">
-                  <th scope="col">Category</th>
-                  <th scope="col">Item</th>
-                  <th scope="col">Cost Center</th>
-                  <th scope="col">Quantity</th>
-                </tr>
-                <tr *ngFor="let product of data.inlineitem">
-                  <td>{{product.category}}</td>
-                  <td>{{product.item}}</td>
-                  <td>{{product.costcenter}}</td>
-                  <td>{{product.quantity}}</td>
-                </tr>
-              </tbody>
-            </table>
-          </ng-container>
+              </ng-container>
+            </tbody>
+          </table>
         </div>
       </div>
     </ion-card-content>
